@@ -1,3 +1,8 @@
+2003-04-21  Jp Calderone  <exarkun@twistedmatrix.com>
+
+	* twisted/internet/interfaces.py: Added getServiceNamed, addService,
+	and removeService to IServiceCollection.
+
 2003-04-21  Brian Warner  <warner@lothar.com>
 
 	* twisted/web/woven/*.py: add test-case-name tags
